--- a/Config_client/src/main/resources/templates/rateview.html
+++ b/Config_client/src/main/resources/templates/rateview.html
@@ -15,6 +15,10 @@
 	<p th:text="'lanes - '+${lanes}" ></p>
 	<p th:text="'tollstart - '+${tollstart}" ></p>
 	<p th:text="'testProperty - '+${testProperty}" ></p>
+	<p th:text="'encryptedValue - '+${encryptedValue}" ></p>
+
+	
+	
 	
 	
 	
